# pose-esimatation

./: CMakeLists.txt  README.md
data/: 3d_locs.pts  facial_landmarks.xml
data/3D-models/: 68-landmark-template.pptpl
docs/: method.odt  notes
source/: app_pose_estim.py  backup_notebook.py  calculate_reprojection_error.h  estimate-camera-params.cpp  facial_landmark_detector.py  makefile  outfile.txt  pose_estimation_utils.py
source/.ipynb_checkpoints/: face_warper-checkpoint.ipynb
src/: features3d.cpp  features3d.h  main.cpp  poseestimation.cpp  poseestimation.h  rigidtransformation.cpp  rigidtransformation.h
